--- a/assets/styles/scss/base/_interactive.scss
+++ b/assets/styles/scss/base/_interactive.scss
@@ -11,14 +11,15 @@ details {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  background-color: var(--background-alt);
-  padding: 10px 10px 0;
-  margin: 1em 0;
-  border-radius: 6px;
+  background-color: var(--color-background--lighter);
+  color: var(--color-text);
+  padding: $buffer--s;
+  margin: $buffer--s;
+  border-radius: $small-dimension--xs;
   overflow: hidden;
 
   &[open] {
-    padding: 10px;
+    padding: $buffer--s;
   }
 
   > :last-child {
@@ -26,11 +27,16 @@ details {
   }
 
   &[open] summary {
-    margin-bottom: 10px;
+    margin-bottom: $buffer--s;
   }
 }
 
 // #  <---------------| <summary> |--------------->
+summary {
+  color: var(--color-text);
+  padding: $buffer--xs;
+  margin: $buffer--xs;
+}
 
 /* -------------------------------------------------------------------------- *\
 // -  <<--------------------<< Other >>-------------------->>
@@ -38,18 +44,20 @@ details {
 
 // #  <---------------| <dialog> |--------------->
 dialog {
-  background-color: var(--background-alt);
-  color: var(--text-main);
+  background-color: var(--color-background--lighter);
+  color: var(--color-text);
   border: none;
-  border-radius: 6px;
-  border-color: var(--border);
-  padding: 10px 30px;
+  border-radius: $small-dimension--xs;
+  border-color: var(--color-secondary);
+  padding: $buffer--s;
+  margin: $buffer--s;
 
   & > header:first-child {
-    background-color: var(--background);
-    border-radius: 6px 6px 0 0;
-    margin: -10px -30px 10px;
-    padding: 10px;
+    background-color: var(--color-background);
+    color: var(--color-text);
+    border-radius: $small-dimension--xs $small-dimension--xs 0 0;
+    margin: -$buffer--s -$buffer--l $buffer--s;
+    padding: $buffer--s;
     text-align: center;
   }
 
@@ -60,3 +68,8 @@ dialog {
 }
 
 // #  <---------------| <menu> |--------------->
+menu {
+  color: var(--color-text);
+  padding: $buffer--xs;
+  margin: $buffer--xs;
+}
