--- a/assets/styles/scss/base/_root.scss
+++ b/assets/styles/scss/base/_root.scss
@@ -26,7 +26,7 @@ body {
   max-width: $max-width--root;
   margin: $center-me;
   background-color: var(--color-background);
-  color: var(--color-foreground);
+  color: var(--color-text);
   font-family: $font-family--text;
   font-weight: $font-weight--text;
   line-height: $line-height--text;
