--- a/assets/styles/scss/waiting-on-migration/pages/home-webshop/_section-3--about.scss
+++ b/assets/styles/scss/waiting-on-migration/pages/home-webshop/_section-3--about.scss
@@ -93,24 +93,14 @@
     margin: 2% auto;
     background-image: linear-gradient(
       to right,
-      hsla(
-        var(--color-foreground-h),
-        var(--color-foreground-s),
-        var(--color-foreground-l),
-        0
-      ),
+      hsla(var(--color-text-h), var(--color-text-s), var(--color-text-l), 0),
       hsla(
         var(--color-background-h),
         var(--color-background-s),
         var(--color-background-l),
         0.75
       ),
-      hsla(
-        var(--color-foreground-h),
-        var(--color-foreground-s),
-        var(--color-foreground-l),
-        0
-      )
+      hsla(var(--color-text-h), var(--color-text-s), var(--color-text-l), 0)
     );
   }
 
