--- a/assets/styles/scss/abstracts/mixins/_forms.scss
+++ b/assets/styles/scss/abstracts/mixins/_forms.scss
@@ -9,6 +9,34 @@
 /* -------------------------------------------------------------------------- *\
 // -  <<--------------------<< PARENTS >>-------------------->>
 \* -------------------------------------------------------------------------- */
+@mixin button-like-shared {
+  color: var(--color-text);
+  background-color: var(--color-tertiary);
+  font-family: inherit;
+  font-size: inherit;
+  margin: $buffer--s;
+  padding: $buffer--s;
+  border: none;
+  border-radius: $small-dimension--xs;
+  outline: none;
+
+  &:focus {
+    box-shadow: 0 0 0 $small-dimension--xxs var(--color-tertiary--darkest);
+  }
+
+  &:hover {
+    background: var(--color-tertiary--lighter);
+  }
+
+  &::placeholder {
+    color: var(--color-text--lightest);
+  }
+
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+  }
+}
 
 /* -------------------------------------------------------------------------- *\
 // -  <<--------------------<< CHILDREN >>-------------------->>
